# plouf-prospect

./: .gitignore  ContactDetailsScraper.csv  Dockerfile  Dockerfile_api  README.md  Untitled.ipynb  Untitled1.ipynb  app.py  config.toml  config_dev.yaml  crm_scopa.csv  crm_scopa_old.csv  data_crm.xlsx  data_scopa.xlsx  dev.py  import_prospects_to_crm.py  index.html  pyproject.toml  readme_reactfastapi.md  requirements.txt
api/: main.py  main_backup.py
front/: package.json
front/src/: index.js  routes.js
front/src/views/: Prospects.js
front_old/: package-lock.json  package.json
front_old/src/: App.jsx  index.css
front_st/: app.py
scrapping/: .gitignore  CHANGELOG_CLEANUP.md  QUICKSTART.md  README.md  README_DIRIGEANTS.md  README_INSTALL.md  STRUCTURE.md  app_scrapper.py  base_prospects_finale.csv  codes_postaux.py  consolidation_prospects.py  enrichisseur.py  enrichisseur_chrome.py  enrichisseur_gmb.py  enrichisseur_whois.py  mots_cles.csv  motsclesdejafait.csv  recherche_dirigeants.py  requirements.txt  scrape_business_calade.py  scraper.py  scraper_chrome.py  surveillance.py  test_scraping.csv
scrapping/resultats/: resultats_complets.csv
scrapping/resultats_enrichis/: resultats_enrichis_complets.csv
scrapping/tests/: README.md  test_api_structure.py  test_apis.py  test_multi_apis.py  test_pappers_scraping.py
